# 3k

./: .gitignore  .gitmodules  AGENTS.md  DATASETS  DATASETS   DEV.md  LANGUAGES  MODELS  PRICING  PRICING.md  README.md  RELEASE_NOTES.md  go.mod  go.sum  go.work  go.work.sum  upload_to_ceph.py
.github/: CODEOWNERS  pull_request_template.md  reviewers.yaml  super_linter.env
.github/ISSUE_TEMPLATE/: add-a-new-linter.md  bug.md  devops.md  question.md  使用问题.md  功能需求.md  工作任务.md  系统改进.md
.github/linters/: .golangci.yml  .jscpd.json  .markdown-lint.yml  .shellcheckrc  README.md
.github/scripts/: .shellcheckrc  check_all.sh  check_dir_naming.sh  check_dockerfile.sh  check_file_naming.sh  check_go_tests.sh  check_markdown_filename.sh  check_readme.sh  check_tests.sh  check_todo.sh  gpu_task.py  inference.py
.github/workflows/: additional-lint.yml  additional_lint.yaml  base_image.yaml  build_and_test.yaml  chatui.yaml  ci.yaml  cpodmanager.yaml  cpodmanager_ci.yaml  docker_image.yaml  gateway.yaml  generate-sdk.yml  go.yml  go_service.yaml  golangci-lint.yml  golangci_lint.yaml  gpu_task_ci.yaml  helm_chart_release.yaml  maven.yml  preload-model.yaml  pylint.yml  python.yaml  scheduler.yaml  scheduler_build.yaml  super_linter.yaml  sxcloud-java-build.yaml  sxcloud-java.yaml  sxcloud.yaml  sxcloud_dev.yaml
3kctl/: 3kctl.py  README.md  requirements.txt
3kctl/conf/: config-sample.yaml  config.ini  softwares.yaml
3kctl/deploy/: deploy.py  kubernetes.py  registry.py  software.py  test_software.py  test_utils.py  utils.py
3kctl/download/: download.py  hugging_face.py  (+4 more)
aiadmin/: .gitignore  README.md  pom.xml
aiadmin-web/: .env.development  .env.production  .env.test  PRICING.md  README.md  package.json
chatui/: Dockerfile  README.md
chatui/api/: api.py  app.py  model.py  pyproject.toml
cli/: 3kctl.py  README.md  main.go
cmd/: README.md
common/: README.md
cpodoperator/: .gitignore  Makefile  PROJECT  README.md  go.mod  go.sum
deployment/: DATASETS  README.md  add_nodes  build_k8s  kubeadm_init.sh
devops/: CLI_LIST.md  DOCKER.md  GPU_MODELS  IB.md  LinuxVMDataDiskAutoInitialize.sh  README.md  force_delete_ns.sh  go_proxy.sh
docs/: BILLING.md  NAMESPACEISOLATION.md  QUESTION.md  SYSTEM_ARCHITECTURE.md  cpodoperator.md
e2e/: README.md  a_ib_test.go  b_mpijob_test.go  b_pytorchjob_test.go  c_gpt3_test.go  gpt3_test.go  ib_test.go  k8s_test.go  main_test.go  mpijob_test.go  pytorchjob_test.go
examples/: README.md
experimental/: README.md  demo_test.go
experimental/qmapper_prototype/qmapper/csrc/: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.old.old
experimental/qmapper_prototype/qmapper/csrc/comm/: comm_iface.cc  comm_iface.h  config.h
experimental/qmapper_prototype/qmapper/csrc/comm/components/cpu_iface/: cpu_iface.cc  cpu_iface.h
experimental/qmapper_prototype/qmapper/csrc/comm/components/cuda_iface/: cuda_iface.cc  cuda_iface.h
experimental/qmapper_prototype/qmapper/csrc/comm/components/rocm_iface/: rocm_iface.cc
experimental/qmapper_prototype/qmapper/csrc/comm/execute_context/: execute_engine.h
experimental/qmapper_prototype/qmapper/csrc/comm/execute_context/cpu/: execute_engine_cpu.h
experimental/qmapper_prototype/qmapper/csrc/comm/execute_context/cuda/: execute_engine_cuda.cc  execute_engine_cuda.h  qmap_cuda_executor.cu  qmap_cuda_reduce.cu
experimental/qmapper_prototype/qmapper/csrc/comm/memory_pool/: memory_pool.cc  memory_pool.h
experimental/qmapper_prototype/qmapper/csrc/comm/memory_pool/cpu/: memory_pool_cpu.cc  memory_pool_cpu.h
experimental/qmapper_prototype/qmapper/csrc/comm/memory_pool/cuda/: memory_pool_cuda.cc  memory_pool_cuda.h
experimental/qmapper_prototype/qmapper/csrc/comm/ucx_iface/: ucx_iface.cc  ucx_iface.h  ucx_impls.cc  ucx_impls.h
experimental/qmapper_prototype/qmapper/csrc/meta/: meta_ir.h  sharding_info.cc  sharding_info.h
experimental/qmapper_prototype/qmapper/csrc/tests/comm/components/: cuda_iface_tests.cc
experimental/qmapper_prototype/qmapper/csrc/tests/comm/components/kernels/: vector_add.cu  vector_add.h
experimental/qmapper_prototype/qmapper/csrc/tests/comm/memory_pool/: memory_pool_tests.cc
experimental/qmapper_prototype/qmapper/csrc/utils/: qmap_compiler_defs.cc  qmap_compiler_defs.h  qmap_locks.cc  qmap_locks.h
gomicro/: README.md
gpumon/: README.md
home/: README.md
internal/: README.md
k8s/: README.md  build_k8s  fix_sample.py  kubeadm_init.sh  readme.md  remove_all.sh
manager/: OWNERS  README.md
market-manager/: Dockerfile  OWNERS  README.md  go.mod  go.sum
openapi/: README.md
operator/: README.md  fix_pvc.py  install_kubeflow  install_kubeflow.sh  local-path-storage.yaml  readme.md
pkg/: README.md
rag/: Dockerfile  README.md  config.py  id_text_map.json  rag-service-deployment.yaml  rag-service-service.yaml  requirements.txt  save_to_milvus.py  service.py  trump_news.json  trump_news.txt  truncate_milvus.py
tools/: README.md  lint.sh  super_linter.sh  torch_check_cuda.py
ty/: README.md
ui/: .gitignore  Dockerfile  README.md  nginx.conf  package.json
(+1706 files in other folders)
