[tool.poetry]
name = "aichat"
version = "0.1.0"
description = ""
authors = ["cairong <cr@sxwl.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.90.1"}
httpx = "^0.23.3"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
